# ncurses-space-invaders

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  instrucoes.txt  main.c  test.c
doxygen/: README.md  spcinv
game/: spcinv.c  spcinv.h
spcinv/: CMakeLists.txt  spcinv.c  spcinv.h
src/: CMakeLists.txt  main.c
src/spcinv/: spcinv.c  spcinv.h
